# coco-spi

./: CMakeLists.txt  README.md  conanfile.py
coco/: CMakeLists.txt  SpiMaster.cpp  SpiMaster.hpp
coco/native/coco/platform/: SpiMasterOut.cpp  SpiMasterOut.hpp  SpiMaster_cout.cpp  SpiMaster_cout.hpp
coco/nrf52/coco/platform/: SpiMaster_SPIM3.cpp  SpiMaster_SPIM3.hpp
coco/stm32/coco/platform/: SpiMaster_SPI_DMA.cpp  SpiMaster_SPI_DMA.hpp
coco/stm32f0/coco/platform/: SpiMaster_SPI1.cpp  SpiMaster_SPI1.hpp  SpiMaster_SPI1_DMA.cpp  SpiMaster_SPI1_DMA.hpp
test/: CMakeLists.txt  SpiMasterTest.cpp
test/native/: SpiMasterTest.hpp
test/nrf52dongle/: SpiMasterTest.hpp
test/stm32f051discovery/: SpiMasterTest.hpp
test/stm32f0discovery/: SpiMasterTest.hpp
test/stm32f3348discovery/: SpiMasterTest.hpp
test/stm32f401nucleo/: SpiMasterTest.hpp
test/stm32g431nucleo/: SpiMasterTest.hpp
test/stm32g474nucleo/: SpiMasterTest.hpp
